# kbeam-auth-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  KBEAM-COMPATIBILITY.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
deploy/nginx/: example-app.conf
deploy/systemd/: kbeam-auth-gateway.service.example
docs/: DEMO_BACKGROUND_2026-05-02.md  DEMO_LOGIN_SUCCESS_2026-05-02.md  DEMO_UNLOCK_BUTTONS_2026-05-04.md  DEVICE_LOGIN_DENIED_STATUS_2026-05-13.md  FASTAPI_RUNTIME_FOUNDATION_2026-05-02.md  KBEAM_APP_DEVICE_LOGIN_FIX_2026-05-02.md  LICENSING_2026-05-02.md  LICENSOR_PHONE_REMOVAL_2026-05-04.md  MOBILE_DEMO_CONTENT_PARITY_2026-05-04.md  PRODUCTION_HARDENING_2026-05-02.md  PUBLIC_KBEAM_AUTH_GATEWAY_PLAN_2026-05-02.md  PUBLIC_LOGIN_TRANSPARENCY_2026-05-02.md  QR_SCAN_COMPATIBILITY_2026-05-02.md  ROLLBACK.md  SAME_DEVICE_DEMO_LOGIN_2026-05-02.md  SECURITY_AND_SECRET_HYGIENE.md  VISION_SECTION_2026-05-04.md  WEBSITE_AUTH_GATEWAY_COPY_2026-05-02.md  WEBSITE_LINKS_2026-05-02.md  deployment-examples.md  native-signature-verifier.md  nginx-auth-request.md  protocol-v1.md
src/kbeam_auth_gateway/: __init__.py  app.py  cli.py  config.py  models.py  protocol.py  qr.py  store.py  time.py  verifier.py
src/kbeam_auth_gateway/static/: index.html
tests/: test_auth_flow.py
tools/: public_hygiene_check.py
